syntax = "proto3";
package DomainServices.RealEstateValuationService;
option csharp_namespace = "DomainServices.RealEstateValuationService.Contracts";

message DeleteDeedOfOwnershipDocumentRequest {
    int32 DeedOfOwnershipDocumentId = 1;
}
